@@ -2,25 +2,27 @@
 Hash: SHA512
 
 DIST Bottleneck-0.8.0.tar.gz 1634340 SHA256 f0a980510239f685ebaf4dbc8c9f0e55ac964312e0d11c551208c250d22cc64b SHA512 5b03ce2d0df9d177534d3f1fa02f147b12b23f5fbaa3b2685d1e8b86848c96c54832e0b0b6364479841742785c0b23bcccb51a0ac95675c72efc39693121dcaf WHIRLPOOL 873559617ad5114b953b9824da57bf7d393aa04372ad3c44307fecd875a076864d2509bed4b214372549db97a6c617f5471d1e723ff1a668a3240b7c6ed84a25
-EBUILD bottleneck-0.8.0.ebuild 944 SHA256 54816b363b82c41726b48a4a7584066001a2487500ad675680f2926ce90780b4 SHA512 d0951d1cd18ba0c138a0b47e44d6ccd29b1c29d20f70ae0885809d7a303ae3f9f688006e4d068cb3bf71b04cb56f23db48e8c2f5cbc78d56b1880f8acb63198c WHIRLPOOL 292806592c5987151eac36a73874ddeb5336396fd3fd33bc0cd67e2ad03d66613fe9a49be4619f1749bf411568a98f321fce78b8c2d0320043d67a5d422ff30c
-MISC ChangeLog 1259 SHA256 7a32947dd5a05ccc236c622b87e8c5de3ea75b684bc8dc500d20d594c5920a47 SHA512 29641c9a40b1b4a8185f3a2d5e9afee2ef795135263e3ac6c3adb635a6c214531a6d453a28004a5cde6e8f9e718da18ded688b3e89680ef8488f01db2a2a95ff WHIRLPOOL 9276deeb06addca6717009161e6cd5567344653dabd80fbfb2c5403563ec682ff084b7cf1d54f6a06208fd073f0d4b5d42400e575e2536a3930f5a91b9190a77
+DIST Bottleneck-1.0.0.tar.gz 363223 SHA256 8d9b7ad4fadf9648acc924a6ee522c7cb5b474e75faaad9d90dfd55e2805b495 SHA512 b3edeec0b4c2beeebb08eed8cb7aabb92f736e47c657f1fa580ec36d839941d3d1955209b2286fd9d41c4941b46b97a27049c51bcf5a098d27a19881f570d2d6 WHIRLPOOL f8f0d008b06a701f8c6b1690d5b74c180108d55ea9e8a467c62f76455eff2cf650be6ce676001a4bf7f18d650e1b238d437e5d9bbf60d5b4175af34997b8411d
+EBUILD bottleneck-0.8.0.ebuild 947 SHA256 03cfac14a0cd99a884dc2b75878e30c02adbbdc165f3752f657d8ad56b9a241f SHA512 45c39207c83cce8358ce1e92f5baf7c8cdd11425847b826851a610680dc1fb2ca9705efa8fa68a7975add746f0f150d2d00778aa4822fb732d8506d939ac0cf0 WHIRLPOOL 87e2118f50c3dc2c5330a084e2254f4e760a2e7a260f6d903ee9876240ab0f8f62d327956ba20fa2060de449eabcbdb7886f878daf082a1eb1553f12f12890d9
+EBUILD bottleneck-1.0.0.ebuild 981 SHA256 52959feb7f41f364612b1aeb0baedba2eb8d1213f9d8e0817381c1d563e03982 SHA512 0c9ac1117d7346c9e71cfad1d7d291957cd8987a93bc2df2d59c559cc3fccb99f9c628c72a5906b39680dd72c8defed6e31f0db318be9b4db120a3cab144d13a WHIRLPOOL a16b78334dc85aa681adc980859fa8848076450224e7c254c2e91b1413a498759086185dd9ae6fc05bfd08d5524dc86b305e7831a97115585da4dcaae4af98ba
+MISC ChangeLog 1408 SHA256 1ea353919e8547b1739b64f02cbb0d341e39a9ae681e634ea320eebcd7d51374 SHA512 cafdd3db1b1e43164287ec97ff46f55f59cd470b4a4cb163891a328dab4887a3a607468292821f7586103a07f60a32c0d5f747b119903cdc6592dfd0508874e5 WHIRLPOOL 105884a0f5fb0137b3f8139418b994325142df26310bca7ae8979df6b0b99dea4a12b9a0ea23b4e9ac638523b4ce4fc43fd94c3e6cb6b430430eac101bba98fb
 MISC metadata.xml 366 SHA256 b15a6d0b1bd5e886074fb07306a3847f83bd64ece184b8c7af676bb870141a8c SHA512 b4b3caa3323fed52d67228b7563b832c4d8c55cae5031f0515358c0e9ac9c34b46da89ad62d73ea6b7af254ad2d2dcb0d65e5a6eb96cba634301ef341b5d1c8a WHIRLPOOL 2df84ac342044c0b1a8ebd48261648eb31e38a6b4a88404aaf928f1f635fa3f43f65e3f440553c487554b5623f932554ae8f86d53d77797cd45a611d3331d616
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2.1
 
-iQJ8BAEBCgBmBQJVI+YfXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJVLh2ZXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir5EIP/1r1yTKEL2W+rqaqz4CR7YU6
-5ERJAmXVmVRqGsXu4Ofpu/9KvpXzaFM3AxShFr8pzzvRfaJKgwdBRoQlORYgJl54
-oJrKss1wHEVw5Z4urTohkI/v0ZRqgpN0Kbz9TtMoT3+YxnylOdOpnnWUKSi8Du0A
-ryZgwN+SXF+oGUaTybX82Se6MzFyxYjZQmfarHo6pKYX24EJrXslCW4Kz2pHeOtY
-Hampqq2VI3sp/bzks/LPSKblh3MB6aQrhUvq5uCjI6A9gu2edwPHj9immW2thZ3d
-q1ngLPv+s9V+1I79mxT/WcBrHoyLFXV7+xlT2Z4t9PeMfLODy+VAfuwqXDfabt3B
-nqujWWutBVt7GAfkCfUmKPeipZP1w8QVTZpasVZz3a/aieRXjii/TpQoVd52wxAW
-rIMuSszG/2azzgsjwcvv6Po24SpPW+o+AOw0TpS/nMA1njhwDUbYn5YASWpc5SGv
-SVTTmpl+qg5JXgmwJVW+E5njudw0FbJrWMeKHgaDSfeoA48i3sE7eTUZ7ykRdcO8
-8kyQ9cs8HXjqDrigO2p4p3JHr7dMMuC5zGuUUKsJyCL019fPphy13+n/PiGqgMkC
-8Z/i8HnAFtCA2a4rPUI+zkfeeghAt2usoXgvC5/9eEVcVewSmcb+qNB7lxa4ZGyo
-EdYHRXkxoEAD1gCNclW5
-=LpLJ
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir0yMP/3szOpfuqxLHAM043EgbuqS6
+LtPWqpEVzyWoDDagPbYJEu/HJRFxm+Iyyh7Rx/fZLZ9FW4md1gsnTbrDRR7Esy8H
+zMimGKFfgWL6Qmv7edms5W8WJYn2WE3Painj24ZGALzeQP1KndeHyFxEhTdCbZNc
+oiQpg3qVIoNo6pg/NNzwpjznbOqP0bJ4KQKUeZly0YIWYWFw1FtzuaLeFs8XXp5u
+0ZbKAGozHSHm/Qkrbl8RxqmtiDwXNY9vUunkbqUSaLwj7Mj8e3k2xJuMrGft4StT
+nO5jy6OCGD5gDNhxqWNm/TDZQEvPlSylK5eFMs42BTOlkAcDFdRMPW4x/x7IAk2b
+6SdQyHUkaWeWLlNsTamROYewKvgiQXmeqNe2Lq9RWSC6Fyb9ffJk79WD2+hNm2up
+aEVCP6hJAtptkeZPXAolLEbQDiSViY+dP42JBRa8PLLzBx/Sdn/VPM00lxwuWtgO
+CIqhEs8bje2Ig2IuQpD93OvZId0kj5D3TgGqifpXlde1zqa+LgPbsyVuhGN4JkZs
+BZzlpfB2DJlhnasXNAyffP1FHBXuNt+HyMAgv5lJok0PZh11eN/pwUhWitjAbCY9
+f5Vna+92/S7zMgM4J2lrqLf3ZNaoJzDyy5lQoZTj9bQyRO97Sy2SewJ3Eyg8pIhG
+OpdGmUG3Fd/dHShxINWv
+=Fpnz
 -----END PGP SIGNATURE-----
