@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/bottleneck/bottleneck-0.8.0.ebuild,v 1.5 2015/04/15 08:13:12 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/bottleneck/bottleneck-1.0.0.ebuild,v 1.1 2015/04/15 08:13:12 jlec Exp $
 
 EAPI=5
 
@@ -17,11 +17,11 @@ SRC_URI="mirror://pypi/B/${MY_PN}/${MY_P}.tar.gz"
 
 SLOT="0"
 LICENSE="BSD"
-KEYWORDS="amd64 x86 ~amd64-linux ~x86-linux"
+KEYWORDS="~amd64 ~x86 ~amd64-linux ~x86-linux"
 IUSE=""
 
 RDEPEND="
-	dev-python/numpy[${PYTHON_USEDEP}]
+	>=dev-python/numpy-1.9.1[${PYTHON_USEDEP}]
 	sci-libs/scipy[${PYTHON_USEDEP}]
 "
 DEPEND="${RDEPEND}
@@ -30,6 +30,7 @@ DEPEND="${RDEPEND}
 S="${WORKDIR}"/${MY_P}
 
 python_prepare_all() {
+	emake PYTHONPATH=. pyx
 	emake cfiles
 	distutils-r1_python_prepare_all
 }
