@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/bottleneck
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/bottleneck/ChangeLog,v 1.10 2015/04/07 14:13:50 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/bottleneck/ChangeLog,v 1.11 2015/04/15 08:13:12 jlec Exp $
+
+*bottleneck-1.0.0 (15 Apr 2015)
+
+  15 Apr 2015; Justin Lecher <jlec@gentoo.org> +bottleneck-1.0.0.ebuild,
+  bottleneck-0.8.0.ebuild:
+  Version Bump
 
   17 Feb 2015; Justin Lecher <jlec@gentoo.org> -bottleneck-0.6.0.ebuild,
   -bottleneck-0.7.0.ebuild, metadata.xml:
